--- a/app/src/main/res/layout/segment_activity_filter.xml
+++ b/app/src/main/res/layout/segment_activity_filter.xml
@@ -21,14 +21,16 @@
             android:text="@string/txt_start_date"
             />
 
-        <TextView
+        <EditText
             android:id="@+id/tvStartDate"
             android:layout_marginTop="10dp"
             android:drawableLeft="@drawable/calendar_24dp"
-            android:hint="11 JAN 2019"
+            android:text="2019-02-22"
             android:layout_weight="7"
             android:layout_width="match_parent"
             android:paddingLeft="5dp"
+            android:enabled="false"
+            android:background="@android:color/transparent"
             android:backgroundTint="@color/colorPrimaryDark"
             android:layout_height="wrap_content" />
 
@@ -40,6 +42,7 @@
         android:layout_weight="2"
         android:orientation="vertical"
         android:layout_width="0dp"
+        android:clickable="false"
         android:layout_height="wrap_content">
 
         <TextView
@@ -51,14 +54,16 @@
             android:text="@string/txt_end_date"
             />
 
-        <TextView
+        <EditText
             android:id="@+id/tvEndDate"
             android:layout_marginTop="10dp"
             android:drawableLeft="@drawable/calendar_24dp"
-            android:hint="11 JAN 2019"
+            android:text="2019-03-30"
             android:layout_weight="7"
             android:layout_width="match_parent"
             android:paddingLeft="5dp"
+            android:enabled="false"
+            android:background="@android:color/transparent"
             android:backgroundTint="@color/colorPrimaryDark"
             android:layout_height="wrap_content" />
 
