--- a/app/src/main/res/layout/fragment_add_item_to_group_wages.xml
+++ b/app/src/main/res/layout/fragment_add_item_to_group_wages.xml
@@ -37,7 +37,7 @@
             android:layout_marginTop="12dp">
         <TextView
                 android:id="@+id/totalWagesTitle"
-                android:text="Total Amount"
+                android:text="Amount"
                 android:layout_weight="3"
                 android:layout_width="0dp"
                 android:layout_height="40dp"
@@ -56,39 +56,52 @@
                 android:layout_marginLeft="12dp"/>
     </LinearLayout>
 
-    <TextView
-            android:id="@+id/workersListHeader"
-            android:text="Workers List"
-            android:layout_width="match_parent"
-            android:layout_height="40dp"
-            android:layout_marginTop="40dp"
-            android:layout_marginLeft="20dp"
-            android:textColor="#9b6e2e"
-            android:textSize="24sp"/>
-    <View
-            android:id="@+id/divider"
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:background="?android:attr/listDivider"
-    />
+    <ScrollView
 
-    <android.support.v7.widget.RecyclerView
-            android:id="@+id/employeeRecyclerView"
-            android:layout_marginVertical="20dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <LinearLayout
+            android:orientation="vertical"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
+            android:layout_height="match_parent">
 
-    <Button
-            android:layout_marginTop="20dp"
-            android:gravity="center"
-            android:id="@+id/saveGroupWages"
-            android:layout_gravity="center"
-            android:paddingTop="20dp"
-            android:paddingBottom="20dp"
-            android:text="@string/btxt_save"
-            android:textSize="30sp"
-            android:textColor="@android:color/white"
-            android:background="@drawable/primary_button_bg"
-            android:layout_width="400dp"
-            android:layout_height="wrap_content" />
+            <TextView
+                android:id="@+id/workersListHeader"
+                android:text="Workers List"
+                android:layout_width="match_parent"
+                android:layout_height="40dp"
+                android:layout_marginTop="40dp"
+                android:layout_marginLeft="20dp"
+                android:textColor="#9b6e2e"
+                android:textSize="24sp"/>
+            <View
+                android:id="@+id/divider"
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="?android:attr/listDivider"
+                />
+
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/employeeRecyclerView"
+                android:layout_marginVertical="20dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"/>
+
+            <Button
+                android:layout_marginTop="20dp"
+                android:gravity="center"
+                android:id="@+id/saveGroupWages"
+                android:layout_gravity="center"
+                android:paddingTop="20dp"
+                android:paddingBottom="20dp"
+                android:text="@string/btxt_save"
+                android:textSize="30sp"
+                android:textColor="@android:color/white"
+                android:background="@drawable/primary_button_bg"
+                android:layout_width="400dp"
+                android:layout_height="wrap_content" />
+        </LinearLayout>
+    </ScrollView>
+
+
 </LinearLayout>
