--- a/app/src/main/res/layout/segment_add_payout.xml
+++ b/app/src/main/res/layout/segment_add_payout.xml
@@ -37,12 +37,14 @@
 
         <EditText
             android:id="@+id/etPaymentDate"
-            android:hint="11 JAN 2019"
+            android:text="11 Jan 2019"
             android:layout_weight="7"
             android:layout_width="0dp"
             android:enabled="false"
-            android:background="@drawable/bg_rounded_edittext"
+            android:background="@android:color/transparent"
+            android:textColor="@color/addWorkText"
             android:layout_height="wrap_content" />
+
 
 
     </LinearLayout>
