--- a/app/src/main/res/layout/row_item_category.xml
+++ b/app/src/main/res/layout/row_item_category.xml
@@ -8,5 +8,6 @@
             android:text="CheckBox"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/cbItemCategory"/>
+            android:layout_margin="4dp"
+            android:id="@+id/cb_item_category"/>
 </LinearLayout>
