--- a/app/src/main/res/layout/fragment_settlement_report.xml
+++ b/app/src/main/res/layout/fragment_settlement_report.xml
@@ -8,13 +8,18 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content" >
 
-        <LinearLayout
-            android:orientation="vertical"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="5dp"
+
+        <TextView
+            android:layout_gravity="center"
             android:layout_weight="1"
+            android:id="@+id/outstandingAmount"
+            android:layout_marginBottom="5dp"
             android:layout_width="0dp"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:textSize="15sp"
+            android:textColor="#c64319"
+
+            />
 
         <Button
             android:id="@+id/btnAddNewSettlement"
