--- a/app/src/main/res/layout-sw768dp/row_item_grid.xml
+++ b/app/src/main/res/layout-sw768dp/row_item_grid.xml
@@ -12,32 +12,45 @@
         android:elevation="3dp"
         card_view:cardCornerRadius="2dp">
 
-        <RelativeLayout
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
+            android:layout_height="match_parent"
+            android:orientation="vertical">
             <ImageView
                 android:id="@+id/thumbnail"
-                android:layout_width="match_parent"
-                android:layout_height="150dp"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
                 android:clickable="true"
                 android:src="@drawable/flower_icon"
-                android:scaleType="fitXY" />
+                android:scaleType="fitXY"/>
+            <View
+                android:id="@+id/divider2"
+                android:layout_margin="20dp"
+                android:layout_width="match_parent"
+                android:layout_height="2dp"
+                android:background="?android:attr/listDivider"
+                />
 
             <TextView
                 android:gravity="center"
                 android:id="@+id/item"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/thumbnail"
-                android:paddingLeft="10dp"
-                android:paddingRight="10dp"
-                android:paddingTop="10dp"
-                android:text="Item Name"
-                android:textSize="15dp" />
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+
+            <TextView
+                android:gravity="center"
+                android:id="@+id/units"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+
+            <TextView
+                android:gravity="center"
+                android:id="@+id/category"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
 
 
-        </RelativeLayout>
+        </LinearLayout>
 
     </android.support.v7.widget.CardView>
 
